--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome to Odin</title>
-    <a href="https://www.theodinproject.com/about">click me</a>
 
-    <a href="./recipes/dragonchicken.html">About</a>
+  <!-- Website Title -->
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <title>Welcome to Odins Faviourite Recipes</title>
   </head>
 
+  <!-- Body -->
   <body>
-    <img src="./images/dog.jpg">
+    <div class="nav-bar">
+      <
+    </div>
   </body>
 </html>
