--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html>
-
   <!-- Website Title -->
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -10,8 +7,21 @@
 
   <!-- Body -->
   <body>
+    <!-- Nav-Bar -->
     <div class="nav-bar">
-      <
+      <h1>WELCOME TO ODIN RECIPES</h1>
+    </div>
+
+    <!-- Recipe Layout -->
+    <div class="recipe-cards">
+        <h2>CHICKEN</h2>
+    </div>
+
+     <div class="cards">
+        <h4>Dragon Chicken</h4>
+        <a href="recipes/dragonchicken.html"><img src="https://1.bp.blogspot.com/-Xm0c5sfRH-s/T4xACXJlTBI/AAAAAAAAKHA/JBXX83uoQT8/s1600/Dragon+Chicken+3.jpg" alt="Dragon-Chicken"></a>
+        <p style="text-align: center; border-bottom: 1px solid #000">Description</p>
+        <p>Dragon Chicken is an Indo-Chinese appetizer made with crispy batter-fried chicken strips tossed in a super yummy, sweet, and spicy sauce, sauteed with cashews and bell pepper.</p>
     </div>
   </body>
 </html>
