--- a/recipes/dragonchicken.html
+++ b/recipes/dragonchicken.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <!-- Website Title -->
   <head>
-    <title>Welcome to Odin</title>
-    <a href="https://www.theodinproject.com/about">click me</a>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 
-    <a href="./pages/about.html">About</a>
+    <title>Welcome to Odins Faviourite Recipes</title>
   </head>
 
+  <!-- Body -->
   <body>
-    <img src="./images/dog.jpg">
-  </body>
+    <!-- Nav-Bar -->
+    <div class="nav-bar">
+      <h1>WELCOME TO ODIN RECIPES</h1>
+    </div>
+
+    <!-- Recipe Layout -->
+    <div class="recipe-cards">
+      <h2>DRAGON CHICKEN</h2>
+    </div>
+
+    <div class="recipe-layout">
+      <img src="https://1.bp.blogspot.com/-Xm0c5sfRH-s/T4xACXJlTBI/AAAAAAAAKHA/JBXX83uoQT8/s1600/Dragon+Chicken+3.jpg" alt="Dragon-Chicken">
+
+      <div class="desc">
+        
+      </div>
+    </div>
 </html>
