--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
     </div>
 
     <!-- Recipe Layout -->
-    <div class="recipe-cards">
+    <div class="recipe-cat">
         <h2>CHICKEN</h2>
     </div>
 
      <div class="cards">
         <h4>Dragon Chicken</h4>
-        <a href="recipes/dragonchicken.html"><img src="https://1.bp.blogspot.com/-Xm0c5sfRH-s/T4xACXJlTBI/AAAAAAAAKHA/JBXX83uoQT8/s1600/Dragon+Chicken+3.jpg" alt="Dragon-Chicken"></a>
-        <p style="text-align: center; border-bottom: 1px solid #000">Description</p>
-        <p>Dragon Chicken is an Indo-Chinese appetizer made with crispy batter-fried chicken strips tossed in a super yummy, sweet, and spicy sauce, sauteed with cashews and bell pepper.</p>
+        <a href="recipes/dragonchicken.html"><img src="images/dragonchicken.jpg"></a>
+        <a href="recipes/dragonchicken.html"><p style="text-align: center">Recipe</p></a>
     </div>
   </body>
 </html>
