--- a/recipes/dragonchicken.html
+++ b/recipes/dragonchicken.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Recipe Layout -->
-    <div class="recipe-cards">
+    <div class="recipe-cat">
       <h2>DRAGON CHICKEN</h2>
     </div>
 
@@ -23,7 +23,51 @@
       <img src="https://1.bp.blogspot.com/-Xm0c5sfRH-s/T4xACXJlTBI/AAAAAAAAKHA/JBXX83uoQT8/s1600/Dragon+Chicken+3.jpg" alt="Dragon-Chicken">
 
       <div class="desc">
+        <h3>DESCRIPTION</h3>
+        <h4>Dragon Chicken is a spicy, addictive Indo Chinese appetizer that takes under 30 minutes to put together! Crunchy cashews, fried strips of chicken, lots of onion and capsicum tossed in a spicy red chilli sauce make this a crowd favourite!</h4>
+        <h3>INGREDIENTS</h3>
+        <h4 style="text-align: left; margin-left: 2em">Marinade</h4>
+        <ul style="text-align: left">
+          <li>450 Grams Chicken Thigh boneless, cut into 1/2 inch thickness strips</li>
+          <li>1 Teaspoon Soy Sauce</li>
+          <li>3/4 Teaspoon Salt</li>
+          <li>1/2 Teaspoon Pepper</li>
+          <li>1 Teaspoon Kashmiri Red Chilli Powder or cayenne</li>
+          <li>1 1/2 ablespoons Rice Flour</li>
+          <li>1 1/2 Tablespoons All Purpose Flour maida</li>
+          <li>1 Egg White</li>
+        </ul>
         
+        <h4 style="text-align: left; margin-left: 2em">Stir-Fry</h4>
+        <ul style="text-align: left">
+          <li>1 1/2 Tablespoons finely chopped Garlic
+          <li>1 1/2 Tablespoons finely chopped Garlic
+          <li>1 Tablespoon Red Chilli Paste can reduce to 2 teaspoon if you want less spicy
+          <li>1 medium Onion cut into chunks
+          <li>1 medium Green Capsicum cut into chunks
+          <li>1/4 Cup Cashew Nuts
+          <li>1 Teaspoon Soy Sauce
+          <li>1 Teaspoon Vinegar
+          <li>1 Tablespoon Ketchup
+          <li>1/2 Teaspoon Salt
+          <li>1/2 Teaspoon Pepper freshly ground
+          <li>1 Teaspoon Corn Flour
+          <li>1/4 Cup Water
+        </ul>
+
+        <h3>INSTRUCTIONS</h3>
+        <h4 style="text-align: left; margin-left: 2em">Marinade</h4>
+        <ol style="text-align: left">
+          <li>Add all the marinade ingredients into a mixing bowl. Use a pair of tongs or spoons to mix well. Ensure there are no lumps of flour. Set aside.</li>
+          <li>Heat oil in a frying pan, kadai or wok. Heat enough oil for shallow frying the chicken pieces. Once hot, carefully add the marinated chicken pieces into the oil one at a time. Allow to fry on medium high heat for 2-3 minutes or until golden brown.</li>
+        </ol>
+
+        <h4 style="text-align: left; margin-left: 2em">Stir-Fry</h4>
+        <ol style="text-align: left">
+          <li>Heat oil in a wok on high heat. Once hot, add garlic, ginger and red chilli paste. Fry on high heat for 1-2 minutes or until fragrant.</li>
+          <li>Add onion and bell pepper and saute on high heat for 2-3 minutes. Add cashew nuts and fry for 1-2 minutes.</li>
+          <li>Add soy sauce, vinegar, ketchup, salt and black pepper. Combine corn flour and ¼ cup water in a small bowl and add it to the wok. Cook for 1-2 minutes or until the sauce thickens. Add fried chicken pieces and toss to combine. Serve hot!</li>
+        </ol>
       </div>
     </div>
 </html>
