--- a/recipes/dragonchicken.html
+++ b/recipes/dragonchicken.html
@@ -10,8 +10,13 @@
   <!-- Body -->
   <body>
     <!-- Nav-Bar -->
-    <div class="nav-bar">
+    <div class="nav-bar" id="top">
       <h1>WELCOME TO ODIN RECIPES</h1>
+    </div>
+
+    <!-- Home Nav -->
+    <div class="back">
+      <h3><a href="../index.html" style="text-decoration: none; color: #364F6B">GO BACK TO HOME PAGE</a></h3>
     </div>
 
     <!-- Recipe Layout -->
@@ -25,6 +30,7 @@
       <div class="desc">
         <h3>DESCRIPTION</h3>
         <h4>Dragon Chicken is a spicy, addictive Indo Chinese appetizer that takes under 30 minutes to put together! Crunchy cashews, fried strips of chicken, lots of onion and capsicum tossed in a spicy red chilli sauce make this a crowd favourite!</h4>
+        <h4>COURSE: APPETIZER<br>CUISINE: CHINESE<br>COOK TIME: 30 mins<br>SERVES: 4</h4>
         <h3>INGREDIENTS</h3>
         <h4 style="text-align: left; margin-left: 2em">Marinade</h4>
         <ul style="text-align: left">
@@ -40,19 +46,19 @@
         
         <h4 style="text-align: left; margin-left: 2em">Stir-Fry</h4>
         <ul style="text-align: left">
-          <li>1 1/2 Tablespoons finely chopped Garlic
-          <li>1 1/2 Tablespoons finely chopped Garlic
-          <li>1 Tablespoon Red Chilli Paste can reduce to 2 teaspoon if you want less spicy
-          <li>1 medium Onion cut into chunks
-          <li>1 medium Green Capsicum cut into chunks
-          <li>1/4 Cup Cashew Nuts
-          <li>1 Teaspoon Soy Sauce
-          <li>1 Teaspoon Vinegar
-          <li>1 Tablespoon Ketchup
-          <li>1/2 Teaspoon Salt
-          <li>1/2 Teaspoon Pepper freshly ground
-          <li>1 Teaspoon Corn Flour
-          <li>1/4 Cup Water
+          <li>1 1/2 Tablespoons finely chopped Garlic</li>
+          <li>1 1/2 Tablespoons finely chopped Garlic</li>
+          <li>1 Tablespoon Red Chilli Paste can reduce to 2 teaspoon if you want less spicy</li>
+          <li>1 medium Onion cut into chunks</li>
+          <li>1 medium Green Capsicum cut into chunks</li>
+          <li>1/4 Cup Cashew Nuts</li>
+          <li>1 Teaspoon Soy Sauce</li>
+          <li>1 Teaspoon Vinegar</li>
+          <li>1 Tablespoon Ketchup</li>
+          <li>1/2 Teaspoon Salt</li>
+          <li>1/2 Teaspoon Pepper freshly ground</li>
+          <li>1 Teaspoon Corn Flour</li>
+          <li>1/4 Cup Water</li>
         </ul>
 
         <h3>INSTRUCTIONS</h3>
@@ -66,8 +72,10 @@
         <ol style="text-align: left">
           <li>Heat oil in a wok on high heat. Once hot, add garlic, ginger and red chilli paste. Fry on high heat for 1-2 minutes or until fragrant.</li>
           <li>Add onion and bell pepper and saute on high heat for 2-3 minutes. Add cashew nuts and fry for 1-2 minutes.</li>
-          <li>Add soy sauce, vinegar, ketchup, salt and black pepper. Combine corn flour and ¼ cup water in a small bowl and add it to the wok. Cook for 1-2 minutes or until the sauce thickens. Add fried chicken pieces and toss to combine. Serve hot!</li>
+          <li>Add soy sauce, vinegar, ketchup, salt and black pepper. Combine corn flour and 1/4 cup water in a small bowl and add it to the wok. Cook for 1-2 minutes or until the sauce thickens. Add fried chicken pieces and toss to combine. Serve hot!</li>
         </ol>
+
+        <a href="#top">Back to top</a>
       </div>
     </div>
 </html>
