Added pineapplefriedrice recipe card

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
   <!-- Website Title -->
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -14,13 +15,26 @@
 
     <!-- Recipe Layout -->
     <div class="recipe-cat">
-        <h2>CHICKEN</h2>
+        <h2>RECIPES</h2>
     </div>
 
      <div class="cards">
         <h4>Dragon Chicken</h4>
         <a href="recipes/dragonchicken.html"><img src="images/dragonchicken.jpg"></a>
-        <a href="recipes/dragonchicken.html"><p style="text-align: center">Recipe</p></a>
+        <a href="recipes/dragonchicken.html"><p style="text-align: center; color: #364F6B">Recipe</p></a>
+    </div>
+
+    <div class="cards">
+      <h4>Pineapple Fried Rice</h4>
+      <a href="recipes/pineapplefriedrice.html"><img src="images/dragonchicken.jpg"></a>
+      <a href="recipes/pineapplefriedrice.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
+    </div>
+
+    <div class="cards">
+      <h4></h4>
+      <a href="recipes/dragonchicken.html"><img src="images/dragonchicken.jpg"></a>
+      <a href="recipes/dragonchicken.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
     </div>
   </body>
+</html>
 </html>
