Updated with pepperkaker page link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
 
     <div class="cards">
-      <h4></h4>
-      <a href="recipes/dragonchicken.html"><img src="images/dragonchicken.jpg"></a>
+      <h4>Norwegian Pepperkaker</h4>
+      <a href="recipes/Pepperkaker.html"><img src="images/pepper.jpg"></a>
       <a href="recipes/dragonchicken.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
     </div>
   </body>
