Updated recipe cards

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
     <div class="cards">
       <h4>Pineapple Fried Rice</h4>
-      <a href="recipes/pineapplefriedrice.html"><img src="images/dragonchicken.jpg"></a>
+      <a href="recipes/pineapplefriedrice.html"><img src="images/pine.jpg"></a>
       <a href="recipes/pineapplefriedrice.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
     </div>
 
     <div class="cards">
       <h4>Norwegian Pepperkaker</h4>
-      <a href="recipes/Pepperkaker.html"><img src="images/pepper.jpg"></a>
-      <a href="recipes/dragonchicken.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
+      <a href="recipes/pepperkaker.html"><img src="images/kaker.jpg"></a>
+      <a href="recipes/pepperkaker.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
     </div>
   </body>
 </html>
