Fixed and Updated recipes

--- a/recipes/dragonchicken.html
+++ b/recipes/dragonchicken.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="recipe-layout">
-      <img src="https://1.bp.blogspot.com/-Xm0c5sfRH-s/T4xACXJlTBI/AAAAAAAAKHA/JBXX83uoQT8/s1600/Dragon+Chicken+3.jpg" alt="Dragon-Chicken">
+      <img src="../images/dragonchickenplate.jpg" alt="Dragon-Chicken" style="width: 600px; height: 400px">
 
       <div class="desc">
         <h3>DESCRIPTION</h3>
