Fixed html tags

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html>
   <!-- Website Title -->
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -36,5 +37,4 @@
       <a href="recipes/pepperkaker.html"><p style="text-align: center; color:  #364F6B">Recipe</p></a>
     </div>
   </body>
-</html>
 </html>
